Fixed some spacing issues with the Contact page. Changed a few minor aesthetic details

--- a/src/components/Pages/Contact/Contact.scss
+++ b/src/components/Pages/Contact/Contact.scss
@@ -2,7 +2,7 @@
 
 #contact {
   background: white;
-  height: auto;
+  height: 100vh;
   width: 100%;
   padding-bottom: 15rem;
   @include respond-to("small") {
@@ -26,7 +26,7 @@
   justify-content: center;
   align-content: center;
   margin: 0 auto;
-  
+  margin-bottom: 100px;
   width: 80%;
   
 }
