--- a/src/components/Pages/Navigation/Navigation.scss
+++ b/src/components/Pages/Navigation/Navigation.scss
@@ -13,7 +13,6 @@
   overflow-x: hidden;
   padding-top: 5rem;
   transition: 0.25s;
-  border: 1px solid red;
   z-index: 120;
   @include respond-to("small") {
     height: 35%;
